Revert "fixes/from-email general (not responsive fixes)"

--- a/src/components/Pages/Home/Home.css
+++ b/src/components/Pages/Home/Home.css
@@ -1,7 +1,6 @@
-.slick-prev:before,
-.slick-next:before {
-  color: #ff2b56;
+.carousel__dot {
+  background-color: black;
 }
-.slick-dots li.slick-active button:before {
-  color: #ff2b56;
+.carousel__dot--selected {
+  background-color: #ff2b56;
 }
